--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -23,13 +23,15 @@
     padding-top: 30vh;
     padding-left: 10vh;
     text-shadow: 0 4px 5px lightgray;
+    opacity: 0.3;
+    animation: fadeInAnimation 1.0s ease-in forwards; /* Adjust the duration and timing function as needed */
+    pointer-events: none; /* Make the element non-interactive when it's transparent*/
 }
 
-.fade-in {
-    opacity: 0;
-    animation: fadeInAnimation 1.5s ease-in forwards; /* Adjust the duration and timing function as needed */
+.intro.full-opacity {
+    opacity: 1;
+    pointer-events: auto; /* Restore interaction when fully opaque */
 }
-
 .prompt {
     padding-top: 2vh;
     font-family:"FiraSansExtraLight";
@@ -54,10 +56,16 @@
     border-radius: 35px 35px 35px 35px;
     background-color: #FFE7E9;
     border-color: white;
+    transition-duration: 0.5s;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
               0 8px 12px rgba(0, 0, 0, 0.1),
               0 12px 18px rgba(0, 0, 0, 0.1),
               0 16px 24px rgba(0, 0, 0, 0.1);
+}
+
+.media:hover {
+    background-color: #AAC0EC;
+    border-color: #FFE7E9;
 }
 
 .resume {
@@ -74,20 +82,24 @@
     border-radius: 35px 35px 35px 35px;
     cursor: pointer;
     outline: none;
+    transition-duration: 0.5s;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
               0 8px 12px rgba(0, 0, 0, 0.1),
               0 12px 18px rgba(0, 0, 0, 0.1),
               0 16px 24px rgba(0, 0, 0, 0.1);
+    
 }
 
 .resume:hover {
+    transition-duration: 0.5s;
+    background-color: #FFE7E9;
+    border-color: white;
 
 }
 
-
 @keyframes fadeInAnimation {
     from {
-      opacity: 0;
+      opacity: 0.2;
     }
     to {
       opacity: 1;
