--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,7 +1,91 @@
-.projects{
-    height: 100vh !important; /* Adjust the height as needed */
+.projects {
+    width: 100%;
+    height:  100vh ;
+    display: flex;
+    margin-top: 2%;
+    justify-content: top;
+    align-items: center;
+    flex-direction: column;
+    background-color:#AAC0EC ;
     padding: 0; /* Ensure padding is 0 */
     margin: 0; /* Ensure margin is 0 */
-    background-color:#AAC0EC ;
-  
+    
+  }
+
+
+.title {
+    margin-left:-40vw;
+    margin-top: 12vh;
 }
+
+.projects .projectTitle {
+    text-align: center;
+    color: #3e497a;
+    font-size: 60px;
+    font-weight: bolder;
+  }
+  
+.projectList {
+    width: 70vw;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items: center;
+  }
+
+  .projectItem {
+    border-radius: 15px;
+    width: 300px;
+    height: 300px;
+    margin: 40px;
+    
+    border-color: grey;
+    box-shadow: 0px 3px 15px #FFE7E9;
+    text-align: center;
+  }
+
+  .projectItem:hover {
+    box-shadow: 0px 3px 15px grey;
+    transition: 0.3s ease-in;
+    cursor: pointer;
+  }
+
+  .projectItem .bgImage {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+   
+    background-size: cover;
+  }
+
+  .projectItem h1 {
+    font-size: 35px;
+  }
+
+
+  @media only screen and (max-width: 1300px) {
+    .projectList {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+  
+  @media only screen and (max-width: 800px) {
+    .projectList {
+      grid-template-columns: 1fr;
+    }
+  }
+  
+  @media only screen and (max-width: 800px) {
+    .projectList {
+      width: 100%;
+    }
+    .projectItem {
+      width: 300px;
+      height: 300px;
+    }
+  }
