--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -28,16 +28,16 @@
   }
   
   .project img{
-    width: 90%;
-    height: calc(100vh - 50vh);
+    width: 100%;
+    height: calc(100vh - 40vh);
     justify-content: left;
     align-items: left;
     text-align: left;
     color: #f0f0f0;
     border-radius: 20px 20px 20px 20px;
-    border: 3px solid #FFE7E9;
+    border: 1px solid grey;
     margin-top: 5%;
-    box-shadow: 0 0 8px 3px #FFE7E9;
+    box-shadow: 0 0 8px 3px grey
   }
   
   
