--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -122,3 +122,10 @@
     font-family: 'ConcertOne'; 
     src: url('../assets/fonts/ConcertOne-Regular.ttf') format('truetype'); /* Adjust the path and format */
 }
+
+@media only screen and (max-width: 1300px) {
+    .wrapper{
+        height:1200px;
+    }
+  }
+  
