--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -6,7 +6,7 @@
     justify-content: top;
     align-items: center;
     flex-direction: column;
-    background-color:#AAC0EC ;
+    background-color:#AAC0EC ; /*#AAC0EC*/
     padding: 0; /* Ensure padding is 0 */
     margin: 0; /* Ensure margin is 0 */
     
