--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -7,6 +7,7 @@
     padding: 0;
     margin: 0;
     background-color: #AAC0EC;
+    /* #AAC0EC */
 }
 
 .text {
@@ -55,7 +56,7 @@ p {
 }
 
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 500px) {
     .about{
         height:1200px;
     }
