--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -59,7 +59,7 @@
 }
 
 .linkedin {
-    background-color: rgb(170, 192, 236, 0.1);
+    background-color: rgb(170, 192, 236);
     border-color: #FFE7E9;
     font-size: 19px;
     color: white;
