--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -24,74 +24,56 @@
     color: #3e497a;
     font-size: 60px;
     font-weight: bolder;
+    
   }
+.projectList {
+  display: flex;
+  flex-direction: column; /* vertical list */
+  gap: 25px; /* spacing between items */
+  margin-top: 100px;
+}
+
+.projectItem {
+  font-size: 24px; /* bigger text */
+  color: white;
+  padding: 10px 0;
+}
+
+.projects {
+  color: #2b2f42; /* soft navy text */
+}
+
+.title {
+  font-size: 64px;
+  color: white;
+  margin-bottom: 40px;
+}
 
 .projectList {
-    width: 70vw;
-    height: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    place-items: center;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+  margin-top: 20px;
+}
 
-  .projectItem {
-    border-radius: 15px;
-    width: 300px;
-    height: 300px;
-    margin: 40px;
-    
-    border-color: grey;
-    box-shadow: 0px 3px 15px #FFE7E9;
-    text-align: center;
-  }
+.projectItem {
+  font-size: 22px;
+  color: white; 
+  letter-spacing: 0.3px;
+}
 
-  .projectItem:hover {
-    box-shadow: 0px 3px 15px grey;
-    transition: 0.3s ease-in;
-    cursor: pointer;
-  }
+/* link styles */
+.projectLink {
+  color: #5a75d6;              /* soft pastel blue */
+  text-decoration: none;
+  font-weight: 600;
+}
 
-  .projectItem .bgImage {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-   
-    background-size: cover;
-  }
+.projectLink:visited {
+  color: #7c6bd1;              /* muted pastel purple */
+}
 
-  .projectItem h1 {
-    font-size: 35px;
-  }
-  @media only screen and (max-width: 1300px) {
-    .projects {
-      height: 1200px
-    }
-    .projectList {
-      grid-template-columns: 1fr 1fr;
-      width: 90vw;
-      row-gap: 75px;
-    }
-  }
-  
-  @media only screen and (max-width: 800px) {
-    .projects {
-      height: 1500px;
-    }
-    .title{
-      margin-left: 0;
-    }
-    .projectList {
-      width: 100%;
-      grid-template-columns: 1fr;
-      gap:50px
-    }
-    .projectItem {
-      width: 300px;
-      max-width: none;
-    }
-  }
+.projectLink:hover {
+  color: #e8ebff;              /* soft white highlight */
+  text-decoration: underline;
+}
